# gibdd

./: pyproject.toml  readme.md  requirements.txt
client/: client.py  config.py  main.py
client/static/css/: sign-in.css  tool.css
client/templates/: 404.html  data_policy.html  departament.html  fine.html  lk.html  sign-in.html  transport.html
connection/: config.py  data.py  database.db  fine.py  run.bat  ts.py  users.py
data/: branches.json  department.json  gibdd-parse.py  regions-parse.py  regions.json  service.json
inspector/: client.py  main.py
inspector/static/css/: block.css  main.css  sign-in.css  tool.css
inspector/templates/: about.html  fine.html  transport.html  vu.html
