[project]
name = "gibdd"
version = "0.1.0"
description = "Educational project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "requests>=2.32.4",
]


[tool.poetry]
name = "gibdd"
version = "0.1.0"
description = "Educational project"
authors = ["Your Name <you@example.com>"]  # Обязательно для Poetry!
license = "MIT"  # Рекомендуется указать
readme = "README.md"
homepage = ""  # Опционально
repository = ""  # Опционально
documentation = ""  # Опционально

[tool.poetry.dependencies]
python = ">=3.13"  # Аналог requires-python
beautifulsoup4 = ">=4.13.4"
flask = ">=3.1.1"
requests = ">=2.32.4"

[tool.poetry.dev-dependencies]  # Опционально: dev-зависимости
pytest = "^7.0"  # Пример тестовой зависимости

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"